Restored rates code. Adding more translations. Escaping in template.

--- a/view/frontend/templates/redirect.phtml
+++ b/view/frontend/templates/redirect.phtml
@@ -1,3 +1,6 @@
+<?php
+/** @var $block \Leftor\PikPay\Block\PikPayRedirect */
+?>
 <div class="row">
     <div class="col-xs-12">
         <?php   //var_dump($block->getParam()); die;
@@ -30,28 +33,28 @@
             <?php if($paymentType == 2): ?>
                 <div class="checkout-header">
                     <div class="checkout-title">
-                        <?php echo __("Enter your credit card information."); ?>
+                        <?php echo $block->escapeHtml(__('Enter your credit card information.')); ?>
                     </div>
                 </div>
             <?php if(isset($invalidCcNumber)): ?>
                 <p class="error">
-                    <?php echo __("Invalid credit card number"); ?>
+                    <?php echo $block->escapeHtml(__('Invalid credit card number')); ?>
                 </p>
             <?php endif; ?>
             <?php if(isset($invalidCcDate)): ?>
                 <p class="error">
-                    <?php echo __("Invalid expiry date"); ?>
+                    <?php echo $block->escapeHtml(__('Invalid expiry date')); ?>
                 </p>
             <?php endif; ?>
             <?php if(isset($invalidCcCvc)): ?>
                 <p class="error">
-                    <?php echo __("Incorrect CVC number"); ?>
+                    <?php echo $block->escapeHtml(__('Incorrect CVC number')); ?>
                 </p>
             <?php endif; ?>
                 <div class="errors">
                     <div class="error-card" id="card-error" style="display: none;">
                         <p class="error">
-                            <?php echo __("Invalid credit card number"); ?>
+                            <?php echo $block->escapeHtml(__('Invalid credit card number')); ?>
                         </p>
                     </div>
                     <div class="error-pan" id="pan-error" style="width: 50%;float: left;"></div>
@@ -64,7 +67,7 @@
                            name='pan'
                            maxlength="19"
                            autocomplete="off"
-                           placeholder="Broj kartice"
+                           placeholder="<?php echo $block->escapeHtmlAttr(__('Card number')) ?>"
                            value="<?php if(isset($block->getPostParams()['pan'])) { echo $block->getPostParams()['pan']; } else echo ''; ?>"
                            >
                     <input id="cvv"
@@ -73,7 +76,7 @@
                            name='cvv'
                            maxlength="3"
                            autocomplete="off"
-                           placeholder="Cvv"
+                           placeholder="<?php echo $block->escapeHtmlAttr(__('Cvv')) ?>"
                            value="<?php if(isset($block->getPostParams()['cvv'])) { echo $block->getPostParams()['cvv']; } else echo ''; ?>"
                            >
                 </p>
@@ -83,7 +86,7 @@
                 </div>
                 <p>
                     <select class="checkout-input checkout-exp-mm" id="month" name='month' required>
-                        <option selected disabled value=""><?php echo __("Month"); ?></option>
+                        <option selected disabled value=""><?php echo $block->escapeHtml(__('Month')); ?></option>
                         <?php for ($i=1; $i <= 12; $i++) {
                             if(strlen($i) == 1) {
                                 $i = '0'.$i;
@@ -98,7 +101,7 @@
                         } ?>
                     </select>
                     <select class="checkout-input checkout-exp-yy" id="year" name='year' required>
-                        <option selected disabled value=""><?php echo __("Year"); ?></option>
+                        <option selected disabled value=""><?php echo $block->escapeHtml(__('Year')); ?></option>
                         <?php for ($i=date('Y'); $i <= (date('Y')+10); $i++) {
                             $tag = '';
                             if(isset($block->getPostParams()['year'])) {
@@ -115,13 +118,16 @@
                     <div class="pikpay_installments" style="display:none;">
                         <p>
                         <select name="number_of_installments" class="checkout-input checkout-name">
-                            <option value=""><?php echo __('No installments'); ?></option>
-                            <?php foreach ($block->getInstallmentsNumber() as $number): ?>
-                            <?php $numberOfInstallments = isset($block->getPostParams()['number_of_installments']) ? (int)$block->getPostParams()['number_of_installments'] : null; ?>
-                            <option <?php echo (int)$number === $numberOfInstallments ? 'selected' : ''; ?> value="<?php echo $number; ?>">
-                                <?php echo $block->getRateTranslation($number); ?>
-                            </option>
-                            <?php endforeach; ?>
+                            <option value=""><?php echo $block->escapeHtml(__('No installments')); ?></option>
+                            <?php foreach ($block->getInstallmentsNumber() as $number) {
+                                $tag = '';
+                                if(isset($block->getPostParams()['number_of_installments'])) {
+                                    if((int)$number == (int)$block->getPostParams()['number_of_installments']) {
+                                        $tag = 'selected';
+                                    }
+                                }
+                                echo '<option '.$tag.' value="'.$number.'">'.$block->escapeHtml(__('%1 installment(s)', $number)).'</option>';
+                            } ?>
                         </select>
                         </p>
                     </div>
@@ -161,12 +167,12 @@
                                 }
                             },
                             'messages': {
-                                'pan': $.mage.__("Required field!"),
-                                'month': $.mage.__("Required field!"),
-                                'year': $.mage.__("Required field!"),
+                                'pan': $.mage.__('Required field!'),
+                                'month': $.mage.__('Required field!'),
+                                'year': $.mage.__('Required field!'),
                                 'cvv': {
-                                    "required": $.mage.__("Required field!"),
-                                    "minlength": $.mage.__("You must enter 3 digits")
+                                    "required": $.mage.__('Required field!'),
+                                    "minlength": $.mage.__('You must enter 3 digits')
                                 }
                             }
                         });
@@ -213,7 +219,7 @@
             <?php endif ?>
                 <div class="pikpay_submit">
                     <p>
-                    <input type="button" value='Plati' class="checkout-btn"/>
+                    <input type="button" value="<?php echo $block->escapeHtmlAttr(__('Pay')) ?>" class="checkout-btn"/>
                     </p>
                 </div>
         </form>
@@ -261,7 +267,7 @@
         </div>
         <?php if($paymentType == 1): ?>
         <div class="col-xs-6">
-            <p>Ako se nije desila automatska redirekcija, kliknite na dugme "Plati"</p>
+            <p><?php echo $block->escapeHtml(__('If you\'re not redirected automatically, click "Pay" button')) ?></p>
         </div>
         <script>
             document.getElementById("redirectpay").submit();
