--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -7,6 +7,8 @@
     *
     * For the full copyright and license information, please view the NOTICE
     * and LICENSE files that were distributed with this source code.
+ *
+ * @author Favicode <contact@favicode.net>
 -->
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
