--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -23,7 +23,7 @@
                                                 <item name="payment" xsi:type="array">
                                                     <item name="children" xsi:type="array">
                                                         <item name="renders" xsi:type="array">
-                                                            <!-- Add payment method renderer -->
+                                                            <!-- Add payment method renderers -->
                                                             <item name="children" xsi:type="array">
                                                                 <item name="monri_payments" xsi:type="array">
                                                                     <item name="component" xsi:type="string">Monri_Payments/js/view/monri_payments</item>
@@ -33,8 +33,16 @@
                                                                         </item>
                                                                     </item>
                                                                 </item>
+                                                                <item name="monri_components" xsi:type="array">
+                                                                    <item name="component" xsi:type="string">Monri_Payments/js/view/monri_components</item>
+                                                                    <item name="methods" xsi:type="array">
+                                                                        <item name="monri_components" xsi:type="array">
+                                                                            <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+                                                                        </item>
+                                                                    </item>
+                                                                </item>
                                                             </item>
-                                                            <!-- END Add payment method renderer -->
+                                                            <!-- END Add payment method renderers -->
                                                         </item>
                                                     </item>
                                                 </item>
