--- a/view/frontend/web/template/components.html
+++ b/view/frontend/web/template/components.html
@@ -8,7 +8,7 @@
             <span data-bind="text: getTitle()"></span>
         </label>
     </div>
-    <div class="payment-method-content">
+    <div class="payment-method-content" data-bind="blockLoader: isLoading">
         <!-- ko foreach: getRegion('messages') -->
         <!-- ko template: getTemplate() --><!-- /ko -->
         <!--/ko-->
