--- a/view/frontend/web/template/components.html
+++ b/view/frontend/web/template/components.html
@@ -25,7 +25,7 @@
             <!--/ko-->
         </div>
 
-        <div id="monri-card-container"></div>
+        <div data-bind="afterRender:start" id="monri-card-container"></div>
 
         <div class="actions-toolbar">
             <div class="primary">
