--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -41,6 +41,14 @@
                                                                         </item>
                                                                     </item>
                                                                 </item>
+                                                                <item name="monri_wspay" xsi:type="array">
+                                                                    <item name="component" xsi:type="string">Monri_Payments/js/view/monri_wspay</item>
+                                                                    <item name="methods" xsi:type="array">
+                                                                        <item name="monri_wspay" xsi:type="array">
+                                                                            <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+                                                                        </item>
+                                                                    </item>
+                                                                </item>
                                                             </item>
                                                             <!-- END Add payment method renderers -->
                                                         </item>
