--- a/view/frontend/web/template/wspay_form.html
+++ b/view/frontend/web/template/wspay_form.html
@@ -3,7 +3,7 @@
         <input type="radio"
                name="payment[method]"
                class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
+               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" >
         <label class="label" data-bind="attr: {'for': getCode()}">
             <span data-bind="text: getTitle()"></span>
             <img class="payment-icon" data-bind="attr: {src: 'https://www.wspay.info/layout/logo.png', alt: $t('WsPay logo')}" >
@@ -28,7 +28,7 @@
 
 
 
-        <br/>
+        <br>
         <div class="checkout-agreements-block">
             <!-- ko foreach: $parent.getRegion('before-place-order') -->
             <!-- ko template: getTemplate() --><!-- /ko -->
