implemented first version of wspay card tokens

--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -47,6 +47,9 @@
                                                                         <item name="monri_wspay" xsi:type="array">
                                                                             <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                         </item>
+                                                                        <item name="monri_wspay_vault" xsi:type="array">
+                                                                            <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+                                                                        </item>
                                                                     </item>
                                                                 </item>
                                                             </item>
@@ -64,5 +67,6 @@
                 </argument>
             </arguments>
         </referenceBlock>
+
     </body>
 </page>
