Small changes, additional checks

--- a/view/frontend/templates/payment/additional_info.phtml
+++ b/view/frontend/templates/payment/additional_info.phtml
@@ -16,7 +16,7 @@ $info = $block->getAdditionalPaymentInfo();
             <li><strong><?= $escaper->escapeHtml(__('Credit card type')) ?>:</strong>
                 <?= $escaper->escapeHtml($info['PaymentType'] ?? '') ?></li>
             <li><strong><?= $escaper->escapeHtml(__('Credit card number')) ?>:</strong>
-                <?= $escaper->escapeHtml($info['CreditCardNumber']) ?></li>
+                <?= $escaper->escapeHtml($info['CreditCardNumber'] ?? '') ?></li>
             <li><strong><?= $escaper->escapeHtml(__('Payment plan')) ?>:</strong>
                 <?= $escaper->escapeHtml($info['PaymentPlan'] ?? '') ?></li>
             <li><strong><?= $escaper->escapeHtml(__('Date/Time')) ?>:</strong>
